--- a/app/src/main/res/layout/activity_cheese_cake_item.xml
+++ b/app/src/main/res/layout/activity_cheese_cake_item.xml
@@ -7,27 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".CheeseCakeItem">
 
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="368dp"
-        android:layout_height="98dp"
-        android:text="Japanese Cheesecake Medium"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.082" />
-
     <CheckBox
         android:id="@+id/cbChocolate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:fontFamily="@font/inter"
         android:text="Chocolate"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -37,9 +24,12 @@
 
     <Button
         android:id="@+id/btnAddToCart"
-        android:layout_width="101dp"
-        android:layout_height="55dp"
+        android:layout_width="133dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/inter_bold"
         android:text="Add to Cart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -49,9 +39,12 @@
 
     <Button
         android:id="@+id/btnViewCart"
-        android:layout_width="99dp"
-        android:layout_height="51dp"
+        android:layout_width="136dp"
+        android:layout_height="56dp"
+        android:fontFamily="@font/inter_bold"
         android:text="View Cart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +55,7 @@
         android:id="@+id/imgCheeseCake"
         android:layout_width="298dp"
         android:layout_height="291dp"
+        android:cropToPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -69,6 +63,32 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.27"
         app:srcCompat="@drawable/cheesecakeimage" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="350dp"
+        android:layout_height="105dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022"
+        app:srcCompat="@drawable/cheesetitle" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/inter_bold"
+        android:text="Toppings:"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.622" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
