--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,17 +26,17 @@
 
     <EditText
         android:id="@+id/etEmail"
-        android:layout_width="363dp"
-        android:layout_height="37dp"
+        android:layout_width="359dp"
+        android:layout_height="43dp"
         android:layout_marginBottom="13dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
+        app:layout_constraintHorizontal_bias="0.346"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.402" />
+        app:layout_constraintVertical_bias="0.395" />
 
     <EditText
         android:id="@+id/etPhone"
@@ -46,10 +46,10 @@
         android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
+        app:layout_constraintHorizontal_bias="0.416"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.338" />
+        app:layout_constraintVertical_bias="0.328" />
 
     <EditText
         android:id="@+id/etLastName"
@@ -63,12 +63,12 @@
         app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.285" />
+        app:layout_constraintVertical_bias="0.258" />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="360dp"
-        android:layout_height="44dp"
+        android:layout_width="363dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="25dp"
         android:hint="Password"
         android:inputType="textPassword"
@@ -85,6 +85,7 @@
         android:layout_height="49dp"
         android:enabled="false"
         android:hint="Customer ID"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.425"
@@ -100,10 +101,10 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.218" />
+        app:layout_constraintVertical_bias="0.193" />
 
     <Button
         android:id="@+id/btnSignUp"
