--- a/app/src/main/res/layout/activity_proceed_payment.xml
+++ b/app/src/main/res/layout/activity_proceed_payment.xml
@@ -17,7 +17,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.516" />
 
     <EditText
         android:id="@+id/txtCardNumber"
@@ -50,7 +51,7 @@
         android:layout_width="141dp"
         android:layout_height="43dp"
         android:layout_weight="1"
-        android:hint="***"
+        android:hint="CVV"
         android:inputType="numberPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
