--- a/app/src/main/res/layout/activity_create_review.xml
+++ b/app/src/main/res/layout/activity_create_review.xml
@@ -12,7 +12,7 @@
         android:layout_width="334dp"
         android:layout_height="124dp"
         android:fontFamily="@font/inter"
-        android:hint="Write your review here"
+        android:hint="Write your comments here"
         android:inputType="textMultiLine"
         android:maxLines="10"
         android:minLines="5"
@@ -47,7 +47,7 @@
         android:layout_height="74dp"
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/inter_bold"
-        android:text="Submit Review"
+        android:text="Submit Comment"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,16 +57,12 @@
         app:layout_constraintVertical_bias="0.837" />
 
     <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="290dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageView14"
+        android:layout_width="198dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="88dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/leaveareview" />
+        app:srcCompat="@drawable/feedback"
+        tools:layout_editor_absoluteY="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
