--- a/app/src/main/res/layout/activity_customer_info.xml
+++ b/app/src/main/res/layout/activity_customer_info.xml
@@ -157,7 +157,7 @@
         android:layout_width="218dp"
         android:layout_height="47dp"
         android:fontFamily="@font/inter_bold"
-        android:text="Reviews"
+        android:text="Feedback"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
